formver.compiler-plugin/testData/diagnostics/conversion/nameing/predicate_method_collection_base_collision.kt
// NEVER_VALIDATE
// WITH_STDLIB
// RENDER_PREDICATES

fun <!VIPER_TEXT!>`p$shared`<!>() {}

fun <!VIPER_TEXT!>predicateMethodCollectionBaseCollision<!>(xs: List<Int>) {
    `p$shared`()
    xs.isEmpty()
}
